"Fix footer logo alignment and positioning"

--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -504,6 +504,78 @@ template {
   padding: var(--footer-padding);
 }
 
+.footer .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer .col-1-2 {
+  display: flex;
+  align-items: center;
+}
+
+.footer .col-1-2:first-child {
+  justify-content: flex-start;
+}
+
+.footer .col-1-2:last-child {
+  justify-content: flex-end;
+}
+
+.footer img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  margin-right: 1rem;
+}
+
+.footer-address {
+  color: var(--text-color);
+  margin: 0;
+}
+
+.social-link {
+  display: block;
+  margin: 0 0.5rem;
+}
+
+.social-link svg {
+  fill: var(--text-color);
+  width: 25px;
+  height: 25px;
+}
+
+.social.nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+}
+
+.social.nav .nav-item {
+  margin: 0 0.5rem;
+}
+
+.footer-nav.nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-nav.nav .nav-item {
+  margin: 0 1rem;
+}
+
+.footer-copyright {
+  margin: 0;
+  font-size: var(--font-size-small);
+  color: var(--text-color);
+}
+
 .navbar-menu {
   float: right;
 }
@@ -574,45 +646,9 @@ ul.row::after {
   width: 50%;
 }
 
-.footer-copyright {
-  margin: 0;
-  font-size: var(--font-size-small);
-  color: var(--text-color);
-}
-
-.footer ul {
-  text-align: right;
-}
-
 h2, h3, h4, h5, h6 {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-bold);
-}
-
-/* Ensure footer logo maintains consistent 40x40px square dimensions */
-.footer img {
-  width: 40px;
-  height: 40px;
-  object-fit: cover;
-}
-
-/* Dark theme for sections */
-[data-section-theme="dark"] {
-  --text-color: var(--color-white);
-  --section-title-color: var(--color-white);
-  background-color: var(--color-black);
-}
-
-.footer-address {
-  color: var(--text-color);
-}
-
-.social-link {
-  display: block;
-}
-
-.social-link svg {
-  fill: var(--text-color);
 }
 
 /* Add background and hover state to services */
